--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,11 +2,70 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
 
+  <!--其中encoding用来设置编码格式，forceEncoding用来设置是否理会 request.getCharacterEncoding()方法，设置为true则强制覆盖之前的编码格式-->
+  <filter>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
+  <!--需要配置applicationContext.xml文件的话需要contextConfigLocation参数-->
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
+
+  <!--ContextLoaderListener的作用就是启动Web容器时，自动装配ApplicationContext的配置信息。-->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+
+  <!--springmvc配置-->
   <servlet>
-    <servlet-name></servlet-name>
-    <servlet-class></servlet-class>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springmvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+
+  <!--<welcome-file-list>&lt;!&ndash;指定欢迎页面&ndash;&gt;-->
+    <!--<welcome-file>/WEB-INF/view/home.jsp</welcome-file>-->
+  <!--</welcome-file-list>-->
+  <error-page> <!--当系统出现404错误，跳转到页面nopage.html-->
+    <error-code>404</error-code>
+    <location>/WEB-INF/view/nopage.jsp</location>
+  </error-page>
+  <error-page> <!--当系统出现java.lang.NullPointerException，跳转到页面error.html-->
+    <exception-type>java.lang.NullPointerException</exception-type>
+    <location>/WEB-INF/view/error.jsp</location>
+  </error-page>
+  <session-config><!--会话超时配置，单位分钟-->
+    <session-timeout>360</session-timeout>
+  </session-config>
 </web-app>
